# textual-adversarial-defense

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  environment.yml  pyproject.toml  pytest.ini  utils.cpp
.github/workflows/: build_wheels.yml  cpp_testing.yml  release.yml
InvisAttack/InvisAttack/: boucher.py  charmix.py  codepoints.ipynb  dataloader.py  main.py  myutils.py  tokenizer.ipynb  utils_llm.py
InvisAttack/InvisAttack/results/: boucher_textattack-roberta-base-MNLI_mnli_512k_512npos_50subset.csv  boucher_textattack-roberta-base-QNLI_qnli_512k_512npos_30subset.csv  boucher_textattack-roberta-base-RTE_rte_512k_512npos_30subset.csv  boucher_textattack-roberta-base-SST-2_sst2_512k_512npos_30subset.csv  boucher_textattack-roberta-base-ag-news_agnews_512k_512npos_10subset.csv  charmix_textattack-roberta-base-MNLI_mnli_10k_5npos_100subset.csv  charmix_textattack-roberta-base-MNLI_mnli_10k_5npos_10subset.csv  charmix_textattack-roberta-base-MNLI_mnli_10k_5npos_50subset.csv  charmix_textattack-roberta-base-MNLI_mnli_5npos_10subset.csv  charmix_textattack-roberta-base-MNLI_mnli_5npos_20subset.csv  charmix_textattack-roberta-base-MNLI_mnli_5npos_5subset.csv  charmix_textattack-roberta-base-QNLI_qnli_20_5npos_10subset.csv  charmix_textattack-roberta-base-QNLI_qnli_20k_10npos_20subset.csv  charmix_textattack-roberta-base-QNLI_qnli_20k_10npos_30subset.csv  charmix_textattack-roberta-base-QNLI_qnli_30k_10npos_10subset.csv  charmix_textattack-roberta-base-QNLI_qnli_5npos_20subset.csv  charmix_textattack-roberta-base-QNLI_qnli_5npos_5subset.csv  charmix_textattack-roberta-base-RTE_rte_10k_5npos_50subset.csv  charmix_textattack-roberta-base-RTE_rte_10npos_10subset.csv  charmix_textattack-roberta-base-RTE_rte_5npos_20subset.csv  charmix_textattack-roberta-base-SST-2_sst2_10k_5npos_100subset.csv  charmix_textattack-roberta-base-SST-2_sst2_5npos_20subset.csv  charmix_textattack-roberta-base-ag-news_agnews_10k_5npos_10subset.csv  charmix_textattack-roberta-base-ag-news_agnews_5npos_10subset.csv  charmix_textattack-roberta-base-ag-news_agnews_5npos_8subset.csv  positionrand_textattack-roberta-base-QNLI_qnli_5npos_20subset.csv  positionrand_textattack-roberta-base-RTE_rte_10npos_10subset.csv  positionrand_textattack-roberta-base-SST-2_sst2_10k_5npos_20subset.csv  positionrand_textattack-roberta-base-SST-2_sst2_5npos_100subset_1bs.csv  positionrand_textattack-roberta-base-SST-2_sst2_5npos_50subset.csv  textbugger_textattack-roberta-base-SST-2_sst2_512k_512npos_100subset.csv  textfooler_textattack-roberta-base-MNLI_mnli_512k_512npos_100subset.csv  textfooler_textattack-roberta-base-SST-2_sst2_512k_512npos_100subset.csv  textfooler_textattack-roberta-base-ag-news_agnews_512k_512npos_100subset.csv
InvisAttack/InvisAttack/scripts/: agnews.sh  boucher_agnews.sh  boucher_mnli.sh  boucher_qnli.sh  boucher_rte.sh  boucher_sst.sh  mnli.sh  qnli.sh  rte.sh  sst.sh
InvisAttack/InvisAttack/scripts/baseline/: textbugger.sh  textfooler.sh
InvisText/: .gitignore  utils.h
InvisText/InvisAttack/InvisAttack/: charmix.py  dataloader.py  main.py  myutils.py  sst.sh  tokenizer_test.py
InvisText/InvisAttack/InvisAttack/data/: charmix_roberta-base-SST-2_sst2_results.csv
InvisText/InvisAttack/InvisAttack/results/: charmix_roberta-base-SST-2_sst2_results.csv  positionrand_textattack-roberta-base-SST-2_sst2_5npos_100subset_1024bs.csv  positionrand_textattack-roberta-base-SST-2_sst2_5npos_1subset.csv
InvisText/modules/: combined.cpp  deletion.h  invisible.cpp  invisible.h  tags.cpp
InvisText/python/: generate_attack.py  llama.ipynb
InvisText/python_tests/: python_test.py
InvisText/tests/: test_bidi.cpp  test_variation_selector.cpp
InvisText/utils/: __init__.py
InvisText/utils/variation_selector/: variation_selector.json
core/: pipeline.cpp  pipeline.h  sanitizer.h
modules/: a.out  bidi.cpp  bidi.h  combined.cpp  combined.h  deletion.cpp  generated_homoglyph.cpp  homoglyph.cpp  homoglyph.h  invisible.cpp  invisible.h  resources.h  tags.cpp  tags.h  variation_selector.cpp  variation_selector.h
perf_measure/: benchmarking.py  config.py  functions.py  run_benchmark.sh  run_single_rss.sh
perf_measure/results/: mode=benchmark_length=1000_pct=0.1_attack=bidi_impl=None.csv  mode=benchmark_length=1000_pct=0.1_attack=deletion_impl=None.csv  mode=benchmark_length=1000_pct=0.1_attack=homoglyph_impl=None.csv  mode=benchmark_length=1000_pct=0.1_attack=invisible_impl=None.csv  mode=benchmark_length=1000_pct=0.1_attack=tag_impl=None.csv  mode=benchmark_length=1000_pct=0.1_attack=variation_impl=None.csv
python/: all_attacks_results.csv  all_attacks_results_sanitizer_compare.csv  generate_attack.ipynb  input_size_budget_performance_compare.csv  input_size_performance_compare.csv  pipeline_bindings.cpp  sentiment_attack_defense_results.csv  test.ipynb  test_pipeline.py  tokenizer.ipynb  tokenizer.model
python/experiments/: test.ipynb
python_tests/: README.md  python_test.py  test_bidi.py  test_combined.py  test_deletion.py  test_homoglyph.py  test_invisible.py  test_pipeline.py  test_tags.py  test_variation_selector.py
src/textual_adversarial_defense/: __init__.py
tests/: CMakeLists.txt  README.md  test_bidi.cpp  test_combination.cpp  test_deletion.cpp  test_homoglyph.cpp  test_invisible.cpp  test_tags.cpp  test_variation_selector.cpp
utils/: homoglyphs.py  region_subtag.py  subdivision_id.py  variation_sequences.py
utils/homoglyph/: generated_homoglyph.cpp  homoglyphs.py
utils/homoglyphs/: homoglyphs.py  intentional.json
utils/tags/: region_subtag.py  region_subtags.json  subdivision_id.py  subdivision_ids.json
utils/variation_selector/: variation_selector.py
